*Rails 3.2.0 (unreleased)*

* Added ActiveSupport:TaggedLogging that can wrap any standard Logger class to provide tagging capabilities [DHH]

    Logger = ActiveSupport::TaggedLogging.new(Logger.new(STDOUT))
    Logger.tagged("BCX") { Logger.info "Stuff" }                            # Logs "[BCX] Stuff"
    Logger.tagged("BCX", "Jason") { Logger.info "Stuff" }                   # Logs "[BCX] [Jason] Stuff"
    Logger.tagged("BCX") { Logger.tagged("Jason") { Logger.info "Stuff" } } # Logs "[BCX] [Jason] Stuff"
  
* Added safe_constantize that constantizes a string but returns nil instead of an exception if the constant (or part of it) does not exist [Ryan Oblak]

* ActiveSupport::OrderedHash is now marked as extractable when using Array#extract_options! [Prem Sichanugrist]

* Added Array#prepend as an alias for Array#unshift and Array#append as an alias for Array#<< [DHH]

* The definition of blank string for Ruby 1.9 has been extended to Unicode whitespace.
Also, in 1.8 the ideographic space U+3000 is considered to be whitespace. [Akira Matsuda, Damien Mathieu]

* The inflector understands acronyms. [dlee]

* Deprecated ActiveSupport::Memoizable in favor of Ruby memoization pattern [José Valim]

* Added Time#all_day/week/quarter/year as a way of generating ranges (example: Event.where(created_at: Time.now.all_week)) [DHH]

* Added instance_accessor: false as an option to Class#cattr_accessor and friends [DHH]

* Removed ActiveSupport::SecureRandom in favor of SecureRandom from the standard library [Jon Leighton]

* ActiveSupport::OrderedHash now has different behavior for #each and
#each_pair when given a block accepting its parameters with a splat. [Andrew Radev]

*Rails 3.1.0 (August 30, 2011)*

* ActiveSupport::Dependencies#load and ActiveSupport::Dependencies#require now
return the value from `super` [Aaron Patterson]

* Fixed ActiveSupport::Gzip to work properly in Ruby 1.8 [Guillermo Iguaran]
