@@ -9,3 +9,4 @@ require 'active_support/core_ext/module/synchronization'
 require 'active_support/core_ext/module/deprecation'
 require 'active_support/core_ext/module/remove_method'
 require 'active_support/core_ext/module/method_names'
+require 'active_support/core_ext/module/qualified_const'
